<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReplyActivity">

    <Button
        android:id="@+id/button_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/okay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_fine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/fine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/yes"
        app:layout_constraintStart_toStartOf="@+id/button_go"
        app:layout_constraintTop_toBottomOf="@+id/button_go" />

    <Button
        android:id="@+id/button_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/go"
        app:layout_constraintStart_toStartOf="@+id/button_okay"
        app:layout_constraintTop_toBottomOf="@+id/button_okay" />

    <Button
        android:id="@+id/button_shout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/shout"
        app:layout_constraintEnd_toEndOf="@+id/button_fine"
        app:layout_constraintTop_toBottomOf="@+id/button_fine" />

    <Button
        android:id="@+id/button_come"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/come"
        app:layout_constraintEnd_toEndOf="@+id/button_shout"
        app:layout_constraintTop_toBottomOf="@+id/button_shout" />

    <Button
        android:id="@+id/button_man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/man"
        app:layout_constraintEnd_toEndOf="@+id/button_come"
        app:layout_constraintStart_toStartOf="@+id/button_yes"
        app:layout_constraintTop_toBottomOf="@+id/button_come" />

    <TextView
        android:id="@+id/textView_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_man" />
</androidx.constraintlayout.widget.ConstraintLayout>